box-margin changed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>homework10</title>
 </head>
 <body>
-	<!-- </div>firs-labels -->
+	<!-- </div>first-labels -->
 	<div class="container">
 		<div class="child-div">
 			<div class="first-img" align="first-img">
