--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="page2.html">
 	<title>homework10</title>
 </head>
 <body>
@@ -67,7 +68,7 @@
 			</div>
 			<div class="container2"></div>
 			<div class="send">
-				<p>Send</p>
+				<p><a href="page2.html">Send</a></p>
 			</div>
 		</div>
 	</body>
