--- a/page2.html
+++ b/page2.html
@@ -6,6 +6,31 @@
 	<title>page2</title>
 </head>
 <body>
+	<div class="container">
+		<div class="first-img">
+			<img src="images/family.png" alt="family">
+			<h1 class="page2-img">Tour Booking Form</h1>
+		</div>
+		<h1 class="all-text">When are you planning to visit?</h1>
+	<div class="labels">
+				<label for="name"></label>
+				<input class="first-name" type="text" name="name" id="name" class="input-form" placeholder="mm/dd/yyyy" required>
+			</div>
+			<h1 class="all-text">How many people are in your group?</h1>
+			<label for="number"></label>
+				<input class="first-name" type="number" name="number" id="text1">
+				<h1 class="all-text">Which tours or events are you most interested in?</h1>
+				<label for="comment"></label>
+				<input class="first-name" type="number" name="number" id="text">
+				<h1 class="all-text">What is the best way to contact you?</h1>
+				<input type="checkbox" name="reading">
+			</div>
+			<div class="all-checkbox">
+				<div class="checkbox">
+					<label for="checkbox"> Phone</label>
+				</div>
+			</div>
+	</div>
 
 </body>
 </html>
