--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<h1 class="all-text">And last, how did you hear about us?</h1>
 			</div>
 			<div class="container2">	
-				<input class="container3" type="text" name="first" id="first-name">
+				<textarea class="container3" name="comment" id="comment">  </textarea>   
 			</div>
 			<div class="send">
 				<p><a href="page2.html">Send</a></p>
