Index HTML validator check

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<input type="text" name="first-name" id="first-name" class="form1-input" placeholder="First"> 
 			<input type="text" name="last-name" id="last-name" class="form1-input" placeholder="Last">
 			<h3 class="titles">Email</h3>
-			<input type="mail" name="email" id="email" class="form1-input">
+			<input type="email" name="email" id="email" class="form1-input">
 			<h3 class="titles">Phone</h3>
 			<input type="number" name="number" id="phone" class="form1-input" placeholder="### ### ###">
 			<h3 class="titles">Hobby</h3>
