--- a/index.html
+++ b/index.html
@@ -12,41 +12,49 @@
 			<h1 class="cover-text">Tour Booking Form</h1>
 		</div>
 		<form class="form1">
-			<h3 class="titles">Name</h3>
-			<input type="text" name="first-name" id="first-name" class="form1-input" placeholder="First"> 
-			<input type="text" name="last-name" id="last-name" class="form1-input" placeholder="Last">
-			<h3 class="titles">Email</h3>
-			<input type="email" name="email" id="email" class="form1-input">
-			<h3 class="titles">Phone</h3>
-			<input type="number" name="number" id="phone" class="form1-input" placeholder="### ### ###">
-			<h3 class="titles">Hobby</h3>
-			<div class="hobby-checkbox">	
-				<div class="checkbox-column">
-					<div class="box">
-						<input type="checkbox" name="reading" id="reading">
-						<label for="reading"> Reading</label>
+			<div>
+				<h3 class="titles">Name</h3>
+				<input type="text" name="first-name" id="first-name" class="form1-input" placeholder="First">
+				<input type="text" name="last-name" id="last-name" class="form1-input" placeholder="Last">
+			</div>
+			<div>
+				<h3 class="titles">Email</h3>
+				<input type="email" name="email" id="email" class="form1-input">
+			</div>
+			<div>
+				<h3 class="titles">Phone</h3>
+				<input type="number" name="number" id="phone" class="form1-input" placeholder="### ### ###">
+			</div>
+			<div>
+				<h3 class="titles">Hobby</h3>
+				<div class="hobby-checkbox">	
+					<div class="checkbox-column">
+						<div class="box">
+							<input type="checkbox" name="reading" id="reading">
+							<label for="reading"> Reading</label>
+						</div>
+						<div class="box">
+							<input type="checkbox" name="reading" id="dancing">
+							<label for="dancing"> Dancing</label>
+						</div>	
+						<div class="box">
+							<input type="checkbox" name="reading" id="traveling">
+							<label for="traveling"> Traveling</label>
+						</div>
 					</div>
-					<div class="box">
-						<input type="checkbox" name="reading" id="dancing">
-						<label for="dancing"> Dancing</label>
-					</div>	
-					<div class="box">
-						<input type="checkbox" name="reading" id="traveling">
-						<label for="traveling"> Traveling</label>
-					</div>
-				</div>
-				<div class="checkbox-column">
-					<div class="box">
-						<input type="checkbox" name="reading" id="coding">
-						<label for="coding"> Coding</label>
-					</div>
-					<div class="box">
-						<input type="checkbox" name="reading" id="design">
-						<label for="design"> Design</label>
-					</div>
-					<div class="box">
-						<input type="checkbox" name="reading" id="either">
-						<label for="either"> Either</label>
+					<div class="checkbox-column">
+						<div class="box">
+							<input type="checkbox" name="reading" id="coding">
+							<label for="coding"> Coding</label>
+						</div>
+						<div class="box">
+							<input type="checkbox" name="reading" id="design">
+							<label for="design"> Design</label>
+						</div>
+						<div class="box">
+							<input type="checkbox" name="reading" id="either">
+							<label for="either"> Either</label>
+						</div>
 					</div>
 				</div>
 			</div>
