--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 				</div>
 			</div>
 			<h3 class="phone-question">If phone, when is the best time of day for a call-back?</h3>
-			<div class="last-question">
+			<div class="comment-div">
 				<label class="titles">And last, how did you hear about us?</label>
-				<textarea class="comment" name="comment" id="comment">  </textarea>
+				<textarea class="comment" name="info-source" id="info-source">  </textarea>
 			</div>
 			<div class="send">
 				<a href="page2.html">Send</a>
