class name changes

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 		<form class="form1">
 			<div>
 				<h3 class="titles">Name</h3>
-				<input type="text" name="first-name" id="first-name" class="form1-input" placeholder="First">
-				<input type="text" name="last-name" id="last-name" class="form1-input" placeholder="Last">
+				<input type="text" name="first-name" id="first-name" class="form1-input" placeholder="First" required>
+				<input type="text" name="last-name" id="last-name" class="form1-input" placeholder="Last" required>
 			</div>
 			<div>
 				<h3 class="titles">Email</h3>
-				<input type="email" name="email" id="email" class="form1-input">
+				<input type="email" name="email" id="email" class="form1-input" required>
 			</div>
 			<div>
 				<h3 class="titles">Phone</h3>
-				<input type="number" name="number" id="phone" class="form1-input" placeholder="### ### ###">
+				<input type="number" name="number" id="phone" class="form1-input" placeholder="### ### ###" required>
 			</div>
 			<div>
 				<h3 class="titles">Hobby</h3>
