--- a/page2.html
+++ b/page2.html
@@ -47,15 +47,15 @@
 			<div>
 				<h3 class="titles">If phone, when is the best time of day for a call-back?</h3>
 				<div class="radio-column">
-					<div class="radio">
+					<div class="box">
 						<input type="radio" name="call-back" id="8-11">
 						<label for="8-11">8-11 PM</label>
 					</div>
-					<div class="radio">
+					<div class="box">
 						<input type="radio" name="call-back" id="12-4">
 						<label for="12-4">12-4 AM</label>
 					</div>
-					<div class="radio">
+					<div class="box">
 						<input type="radio" name="call-back" id="6-10">
 						<label for="6-10">6-10 PM</label>
 					</div>
