Update page2 with validator

--- a/page2.html
+++ b/page2.html
@@ -15,17 +15,17 @@
 		<form class="form1">
 			<div>
 				<h3 class="titles">When are you planning to visit?</h3>
-				<label for="name"></label>
-				<input type="date" id="start" name="trip-start" class="form1-input" placeholder="mm/dd/yyyy" min="11/9/2020" max="12/12/2030" required>
+				<label for="start"></label>
+				<input type="date" id="start" name="trip-start" class="form1-input" min="2020/11/09" max="12/12/2030" required>
 			</div>
 			<div>
 				<h3 class="titles">How many people are in your group?</h3>
-				<label for="number"></label>
+				<label for="members"></label>
 				<input type="number" name="members" id="members" class="form1-input" min="1" max="99" required="">
 			</div>
 			<div>
 				<h3 class="titles">Which tours or events are you most interested in?</h3>
-				<label for="comment"></label>
+				<label for="interest"></label>
 				<input type="text" name="interest" id="interest" class="form1-input">
 			</div>
 			<div>
@@ -73,7 +73,7 @@
 			<div class="send">
 				<a href="index.html">Send</a>
 			</div>
-			
+		</form>
 	</div>
 
 </body>
